{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 38,
  "lineage": "ef88f91f-a816-6936-938c-08455bc9d0ba",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/frontendIPConfigurations/web_lb_public_ip-1",
                "name": "web_lb_public_ip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/publicIPAddresses/devOps-dev-lbpublicip"
              }
            ],
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb",
            "location": "centralindia",
            "name": "devOps-dev-web-lb",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/backendAddressPools/web-backend-1",
            "loadbalancer_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb",
            "name": "web-backend-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/probes/web-lb-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb",
            "name": "web-lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/backendAddressPools/web-backend-1"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/frontendIPConfigurations/web_lb_public_ip-1",
            "frontend_ip_configuration_name": "web_lb_public_ip-1",
            "frontend_port": 80,
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/loadBalancingRules/web-lb-rule-app1",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb",
            "name": "web-lb-rule-app1",
            "probe_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/loadBalancers/devOps-dev-web-lb/probes/web-lb-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkInterfaces/devOps-dev-bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "jjhgecjcctpedj4wvftnbxi3ga.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.1.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/publicIPAddresses/devOps-dev-bastion-host-publicip",
                "subnet_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-bastionSubnet"
              }
            ],
            "location": "centralindia",
            "name": "devOps-dev-bastion-host-linuxvm-nic",
            "private_ip_address": "10.1.100.4",
            "private_ip_addresses": [
              "10.1.100.4"
            ],
            "resource_group_name": "devOps-dev-rg-locxlfks"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-appSubnet-nsg",
            "location": "centralindia",
            "name": "devOps-dev-vnet-appSubnet-nsg",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-bastionSubnet-nsg",
            "location": "centralindia",
            "name": "devOps-dev-vnet-bastionSubnet-nsg",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-dbSubnet-nsg",
            "location": "centralindia",
            "name": "devOps-dev-vnet-dbSubnet-nsg",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-webSubnet-nsg",
            "location": "centralindia",
            "name": "devOps-dev-vnet-webSubnet-nsg",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmss_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-web-vmss-nsg",
            "location": "centralindia",
            "name": "devOps-dev-web-vmss-nsg",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-2",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-1",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-appSubnet-nsg/securityRules/app-nsg-rule-inbound-22",
            "name": "app-nsg-rule-inbound-22",
            "network_security_group_name": "devOps-dev-vnet-appSubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-appSubnet-nsg/securityRules/app-nsg-rule-inbound-80",
            "name": "app-nsg-rule-inbound-80",
            "network_security_group_name": "devOps-dev-vnet-appSubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-bastionSubnet-nsg/securityRules/bastion-nsg-rule-inbound-22",
            "name": "bastion-nsg-rule-inbound-22",
            "network_security_group_name": "devOps-dev-vnet-bastionSubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-bastionSubnet-nsg/securityRules/bastion-nsg-rule-inbound-3389",
            "name": "bastion-nsg-rule-inbound-3389",
            "network_security_group_name": "devOps-dev-vnet-bastionSubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-dbSubnet-nsg/securityRules/db-nsg-rule-inbound-3306",
            "name": "db-nsg-rule-inbound-3306",
            "network_security_group_name": "devOps-dev-vnet-dbSubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-dbSubnet-nsg/securityRules/db-nsg-rule-inbound-1433",
            "name": "db-nsg-rule-inbound-1433",
            "network_security_group_name": "devOps-dev-vnet-dbSubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-dbSubnet-nsg/securityRules/db-nsg-rule-inbound-5432",
            "name": "db-nsg-rule-inbound-5432",
            "network_security_group_name": "devOps-dev-vnet-dbSubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-webSubnet-nsg/securityRules/web-nsg-rule-inbound-80",
            "name": "web-nsg-rule-inbound-80",
            "network_security_group_name": "devOps-dev-vnet-webSubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-webSubnet-nsg/securityRules/web-nsg-rule-inbound-443",
            "name": "web-nsg-rule-inbound-443",
            "network_security_group_name": "devOps-dev-vnet-webSubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-webSubnet-nsg/securityRules/web-nsg-rule-inbound-22",
            "name": "web-nsg-rule-inbound-22",
            "network_security_group_name": "devOps-dev-vnet-webSubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/publicIPAddresses/devOps-dev-bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.96.119",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "devOps-dev-bastion-host-publicip",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/publicIPAddresses/devOps-dev-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.96.146",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "devOps-dev-lbpublicip",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Owner": "devOps"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-appSubnet",
            "name": "devOps-dev-vnet-appSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "virtual_network_name": "devOps-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-bastionSubnet",
            "name": "devOps-dev-vnet-bastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "virtual_network_name": "devOps-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-dbSubnet",
            "name": "devOps-dev-vnet-dbSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "virtual_network_name": "devOps-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-webSubnet",
            "name": "devOps-dev-vnet-webSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "virtual_network_name": "devOps-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-appSubnet",
            "network_security_group_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-appSubnet-nsg",
            "subnet_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-appSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-bastionSubnet",
            "network_security_group_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-bastionSubnet-nsg",
            "subnet_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-bastionSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-dbSubnet",
            "network_security_group_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-dbSubnet-nsg",
            "subnet_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-dbSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-webSubnet",
            "network_security_group_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/networkSecurityGroups/devOps-dev-vnet-webSubnet-nsg",
            "subnet_id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet/subnets/devOps-dev-vnet-webSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "09624e4a-1422-41de-a7d6-a966d0dd1d30",
            "id": "/subscriptions/effb83b7-cd87-4360-b745-7eb4100647d0/resourceGroups/devOps-dev-rg-locxlfks/providers/Microsoft.Network/virtualNetworks/devOps-dev-vnet",
            "location": "centralindia",
            "name": "devOps-dev-vnet",
            "resource_group_name": "devOps-dev-rg-locxlfks",
            "tags": {
              "Environment": "dev",
              "Owner": "devOps"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}